--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,3 @@
 GOOGLE_API_KEY = your_google_api_key_here
 MODEL_NAME = gemini-2.5-flash
+BACKEND_URL = https://memory-persona-ai.onrender.com # or http://localhost:8000
